@@ -209,6 +209,14 @@ public class DriverSpy implements Driver
   static boolean TrimSql;
 
   /**
+   * Coldfusion typically calls PreparedStatement.getGeneratedKeys() after
+   * every SQL update call, even if it's not warranted.  This typically produces
+   * an exception that is ignored by Coldfusion.  If this flag is true, then
+   * any exception generated by this method is also ignored by log4jdbc.
+   */
+  static boolean SuppressGetGeneratedKeysException;
+
+  /**
    * Get a Long option from a property and
    * log a debug message about this.
    *
@@ -426,6 +434,10 @@ public class DriverSpy implements Driver
       "log4jdbc.auto.load.popular.drivers", true);
 
     TrimSql = getBooleanOption(props, "log4jdbc.trim.sql", true);
+
+    SuppressGetGeneratedKeysException = 
+    	getBooleanOption(props, "log4jdbc.suppress.generated.keys.exception", 
+    	false);
 
     // The Set of drivers that the log4jdbc driver will preload at instantiation
     // time.  The driver can spy on any driver type, it's just a little bit
